# pkgsrc

./: Makefile  Packages.txt  README  README.md  TODO  _NetBSD-pkgdb  buildlink2.txt  pkglocate  pkgsrc.html  pkgsrc.txt
archivers/hs-tar/patches/: patch-tar.cabal
archivers/hs-zlib/patches/: patch-zlib.cabal
archivers/libarchive/files/: CMakeLists.txt  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.ac  version
archivers/libarchive/files/cat/test/: list.h
archivers/libarchive/files/contrib/: libarchive.1aix53.spec  libarchive.spec
archivers/libarchive/files/cpio/: cmdline.c  cpio.c  cpio.h  cpio_platform.h  match.c  util.c
archivers/libarchive/files/cpio/test/: list.h  main.c  test.h  test_basic.c  test_gcpio_compat.c  test_gcpio_compat_ref.crc  test_gcpio_compat_ref.newc  test_gcpio_compat_ref.ustar  test_help.c  test_option_B.c  test_option_L.c  test_option_a.c  test_option_d.c  test_option_m.c  test_option_m.cpio  test_option_t.c  test_option_tv.stdout  test_pathmatch.c  test_version.c  test_write_odc.c
archivers/libarchive/files/doc/html/: Makefile  archive_entry.3.html  archive_entry_acl.3.html  archive_entry_linkify.3.html  archive_entry_misc.3.html  archive_entry_paths.3.html  archive_entry_perms.3.html  archive_entry_stat.3.html  archive_entry_time.3.html  archive_read.3.html  archive_read_add_passphrase.3.html  archive_read_data.3.html  archive_read_disk.3.html  archive_read_extract.3.html  archive_read_filter.3.html  archive_read_format.3.html  archive_read_free.3.html  archive_read_header.3.html  bsdcpio.1.html  (+25 more)
archivers/libarchive/files/libarchive/: archive.h  archive_crypto_private.h  archive_entry.c  archive_entry.h  archive_entry_link_resolver.c  archive_entry_private.h  archive_openssl_hmac_private.h  archive_pack_dev.c  archive_pack_dev.h  archive_platform.h  archive_read_disk_entry_from_file.c  archive_read_disk_posix.c  archive_read_support_format_iso9660.c  archive_read_support_format_mtree.c  archive_read_support_format_tar.c  archive_write_disk.c  archive_write_disk_acl.c  archive_write_set_format_pax.c  config_windows.h
archivers/libarchive/files/libarchive_fe/: passphrase.c
archivers/libarchive/files/tar/: bsdtar.c  getdate.c  subst.c  write.c
archivers/libarchive/files/test_utils/: test_common.h
archivers/libarchive/files/unzip/: bsdunzip.c  la_getline.c
archivers/libarchive/files/windows/: mvcpp.nt  wccpp.nt
archivers/pax/files/: Makefile.in  acconfig.h  aclocal.m4  ar_io.c  ar_subs.c  buf_subs.c  config.guess  config.h.in  config.sub  configure  configure.ac  cpio.1  cpio.c  cpio.cat1  cpio.h  dumptar.c  extern.h  file_subs.c  ftree.c  ftree.h  gen_subs.c  getid.c  getoldopt.c  misc.c  mtree.h  mtree_extern.h  options.c  options.h  pack_dev.c  pack_dev.h  pat_rep.c  pat_rep.h  pax.1  pax.c  pax.cat1  pax.h  pax2nbcompat  sel_subs.c  sel_subs.h  spec.c  (+10 more)
bootstrap/bmake/: ChangeLog  FILES  Makefile.in  README  aclocal.m4  arch.c  bit.h  buf.c  buf.h  compat.c  cond.c  config.h.in  configure  configure.in  dir.c  dir.h  for.c  getenv.c  getopt.c  hash.c  hash.h  install-sh  job.c  job.h  list.h  lst.h  machine.sh  main.c  make-conf.h  make.1  make.c  make.h  makefile.boot.in  mkdeps.sh  nonints.h  parse.c  pathnames.h  ranlib.h  setenv.c  sigcompat.c  (+9 more)
bootstrap/bmake/PSD.doc/: Makefile  tutorial.ms
bootstrap/bmake/lst.lib/: Makefile  lstAppend.c  lstAtEnd.c  lstAtFront.c  lstClose.c  lstConcat.c  lstDatum.c  lstDeQueue.c  lstDestroy.c  lstDupl.c  lstEnQueue.c  lstFind.c  lstFindFrom.c  lstFirst.c  lstForEach.c  lstForEachFrom.c  lstInit.c  lstInsert.c  lstInt.h  lstIsAtEnd.c  lstIsEmpty.c  lstLast.c  lstMember.c  lstNext.c  lstOpen.c  lstRemove.c  lstReplace.c  lstSucc.c  makefile.boot.in
bootstrap/bmake/missing/sys/: cdefs.h
bootstrap/bmake/mk/: bsd.README  bsd.dep.mk  bsd.depall.mk  bsd.doc.mk  bsd.files.mk  bsd.hostprog.mk  bsd.inc.mk  bsd.info.mk  bsd.kernobj.mk  bsd.kinc.mk  bsd.kmod.mk  bsd.lib.mk  bsd.links.mk  bsd.man.mk  bsd.nls.mk  bsd.obj.mk  bsd.prog.mk  bsd.subdir.mk  bsd.sys.mk  sys.mk
converters/hs-aeson-pretty/patches/: patch-aeson-pretty.cabal
converters/hs-aeson/patches/: patch-aeson.cabal
converters/hs-base64/patches/: patch-base64.cabal
converters/hs-cborg-json/patches/: patch-cborg-json.cabal
converters/hs-microaeson/patches/: patch-microaeson.cabal
converters/pandoc/patches/: patch-pandoc.cabal  patch-src_Text_Pandoc_Options.hs  patch-src_Text_Pandoc_Readers_Docx_Combine.hs  patch-src_Text_Pandoc_Readers_Haddock.hs
databases/hs-direct-sqlite/patches/: patch-direct-sqlite.cabal
databases/hs-sqlite-simple/patches/: patch-sqlite-simple.cabal
devel/darcs/patches/: patch-Setup.hs  patch-aa  patch-ab  patch-ac  patch-ad  patch-darcs.cabal  patch-src_Darcs_Patch_Annotate.hs  patch-src_Darcs_Patch_Index_Monad.hs  patch-src_Darcs_UI_Commands_Log.hs  patch-src_Darcs_UI_SelectChanges.hs  patch-src_Darcs_Util_Compat.hs  patch-src_Darcs_Util_Tree_Hashed.hs  patch-src_Darcs_Util_Tree_Monad.hs
devel/floskell/patches/: patch-floskell.cabal
devel/fourmolu/patches/: patch-fourmolu.cabal
devel/happy/patches/: patch-happy.cabal
devel/hs-ListLike/patches/: patch-ListLike.cabal
devel/hs-MonadRandom/patches/: patch-MonadRandom.cabal
devel/hs-assoc/patches/: patch-assoc.cabal
devel/hs-async/patches/: patch-async.cabal
devel/hs-blaze-builder/patches/: patch-blaze-builder.cabal
devel/hs-cpphs/patches/: patch-cpphs.cabal
devel/hs-data-fix/patches/: patch-data-fix.cabal
devel/hs-deepseq-generics/patches/: patch-deepseq-generics.cabal
devel/hs-dependent-sum/patches/: patch-dependent-sum.cabal
devel/hs-echo/patches/: patch-echo.cabal
devel/hs-errors/patches/: patch-errors.cabal
www/contao210-translations/: DESCR  Makefile  PLIST.ar  PLIST.bg  PLIST.bs  PLIST.cs  PLIST.da  PLIST.es  PLIST.fa  PLIST.fi  PLIST.fr  PLIST.gl  PLIST.gn  PLIST.hr  PLIST.hu  PLIST.is  PLIST.it  PLIST.ja  PLIST.ku  PLIST.lt  PLIST.lv  PLIST.nl  PLIST.pl  PLIST.pt  PLIST.rm  PLIST.ro  PLIST.ru  PLIST.sk  PLIST.sl  PLIST.sq  PLIST.sr  PLIST.sv  PLIST.tr  PLIST.uk  distinfo  options.mk
(+204275 files in other folders)
