@comment $NetBSD: PLIST.gn,v 1.1.1.1 2011/08/12 13:13:18 taca Exp $
${CT_WEBDIR}/system/modules/backend/languages/gn/.htaccess
${CT_WEBDIR}/system/modules/backend/languages/gn/countries.php
${CT_WEBDIR}/system/modules/backend/languages/gn/default.php
${CT_WEBDIR}/system/modules/backend/languages/gn/explain.php
${CT_WEBDIR}/system/modules/backend/languages/gn/languages.php
${CT_WEBDIR}/system/modules/backend/languages/gn/modules.php
${CT_WEBDIR}/system/modules/backend/languages/gn/tl_article.php
${CT_WEBDIR}/system/modules/backend/languages/gn/tl_content.php
${CT_WEBDIR}/system/modules/backend/languages/gn/tl_files.php
${CT_WEBDIR}/system/modules/backend/languages/gn/tl_form.php
${CT_WEBDIR}/system/modules/backend/languages/gn/tl_form_field.php
${CT_WEBDIR}/system/modules/backend/languages/gn/tl_install.php
${CT_WEBDIR}/system/modules/backend/languages/gn/tl_layout.php
${CT_WEBDIR}/system/modules/backend/languages/gn/tl_log.php
${CT_WEBDIR}/system/modules/backend/languages/gn/tl_maintenance.php
${CT_WEBDIR}/system/modules/backend/languages/gn/tl_member.php
${CT_WEBDIR}/system/modules/backend/languages/gn/tl_member_group.php
${CT_WEBDIR}/system/modules/backend/languages/gn/tl_module.php
${CT_WEBDIR}/system/modules/backend/languages/gn/tl_page.php
${CT_WEBDIR}/system/modules/backend/languages/gn/tl_settings.php
${CT_WEBDIR}/system/modules/backend/languages/gn/tl_style.php
${CT_WEBDIR}/system/modules/backend/languages/gn/tl_style_sheet.php
${CT_WEBDIR}/system/modules/backend/languages/gn/tl_task.php
${CT_WEBDIR}/system/modules/backend/languages/gn/tl_theme.php
${CT_WEBDIR}/system/modules/backend/languages/gn/tl_undo.php
${CT_WEBDIR}/system/modules/backend/languages/gn/tl_user.php
${CT_WEBDIR}/system/modules/backend/languages/gn/tl_user_group.php
${CT_WEBDIR}/system/modules/calendar/languages/gn/.htaccess
${CT_WEBDIR}/system/modules/calendar/languages/gn/default.php
${CT_WEBDIR}/system/modules/calendar/languages/gn/modules.php
${CT_WEBDIR}/system/modules/calendar/languages/gn/tl_calendar.php
${CT_WEBDIR}/system/modules/calendar/languages/gn/tl_calendar_events.php
${CT_WEBDIR}/system/modules/calendar/languages/gn/tl_module.php
${CT_WEBDIR}/system/modules/calendar/languages/gn/tl_user.php
${CT_WEBDIR}/system/modules/calendar/languages/gn/tl_user_group.php
${CT_WEBDIR}/system/modules/comments/languages/gn/.htaccess
${CT_WEBDIR}/system/modules/comments/languages/gn/modules.php
${CT_WEBDIR}/system/modules/comments/languages/gn/tl_comments.php
${CT_WEBDIR}/system/modules/comments/languages/gn/tl_content.php
${CT_WEBDIR}/system/modules/comments/languages/gn/tl_module.php
${CT_WEBDIR}/system/modules/faq/languages/gn/.htaccess
${CT_WEBDIR}/system/modules/faq/languages/gn/default.php
${CT_WEBDIR}/system/modules/faq/languages/gn/modules.php
${CT_WEBDIR}/system/modules/faq/languages/gn/tl_faq.php
${CT_WEBDIR}/system/modules/faq/languages/gn/tl_faq_category.php
${CT_WEBDIR}/system/modules/faq/languages/gn/tl_module.php
${CT_WEBDIR}/system/modules/frontend/languages/gn/.htaccess
${CT_WEBDIR}/system/modules/frontend/languages/gn/default.php
${CT_WEBDIR}/system/modules/frontend/languages/gn/modules.php
${CT_WEBDIR}/system/modules/listing/languages/gn/.htaccess
${CT_WEBDIR}/system/modules/listing/languages/gn/modules.php
${CT_WEBDIR}/system/modules/listing/languages/gn/tl_module.php
${CT_WEBDIR}/system/modules/news/languages/gn/.htaccess
${CT_WEBDIR}/system/modules/news/languages/gn/default.php
${CT_WEBDIR}/system/modules/news/languages/gn/modules.php
${CT_WEBDIR}/system/modules/news/languages/gn/tl_module.php
${CT_WEBDIR}/system/modules/news/languages/gn/tl_news.php
${CT_WEBDIR}/system/modules/news/languages/gn/tl_news_archive.php
${CT_WEBDIR}/system/modules/news/languages/gn/tl_news_comments.php
${CT_WEBDIR}/system/modules/news/languages/gn/tl_user.php
${CT_WEBDIR}/system/modules/news/languages/gn/tl_user_group.php
${CT_WEBDIR}/system/modules/newsletter/languages/gn/.htaccess
${CT_WEBDIR}/system/modules/newsletter/languages/gn/default.php
${CT_WEBDIR}/system/modules/newsletter/languages/gn/modules.php
${CT_WEBDIR}/system/modules/newsletter/languages/gn/tl_member.php
${CT_WEBDIR}/system/modules/newsletter/languages/gn/tl_module.php
${CT_WEBDIR}/system/modules/newsletter/languages/gn/tl_newsletter.php
${CT_WEBDIR}/system/modules/newsletter/languages/gn/tl_newsletter_channel.php
${CT_WEBDIR}/system/modules/newsletter/languages/gn/tl_newsletter_recipients.php
${CT_WEBDIR}/system/modules/newsletter/languages/gn/tl_user.php
${CT_WEBDIR}/system/modules/newsletter/languages/gn/tl_user_group.php
${CT_WEBDIR}/system/modules/registration/languages/gn/.htaccess
${CT_WEBDIR}/system/modules/registration/languages/gn/default.php
${CT_WEBDIR}/system/modules/registration/languages/gn/modules.php
${CT_WEBDIR}/system/modules/registration/languages/gn/tl_module.php
${CT_WEBDIR}/system/modules/rep_base/languages/gn/.htaccess
${CT_WEBDIR}/system/modules/rep_base/languages/gn/modules.php
${CT_WEBDIR}/system/modules/rep_base/languages/gn/tl_repository.php
${CT_WEBDIR}/system/modules/rep_base/languages/gn/tl_settings.php
${CT_WEBDIR}/system/modules/rep_client/languages/gn/.htaccess
${CT_WEBDIR}/system/modules/rep_client/languages/gn/modules.php
${CT_WEBDIR}/system/modules/rep_client/languages/gn/tl_repository.php
${CT_WEBDIR}/system/modules/rep_client/languages/gn/tl_settings.php
${CT_WEBDIR}/system/modules/rss_reader/languages/gn/.htaccess
${CT_WEBDIR}/system/modules/rss_reader/languages/gn/modules.php
${CT_WEBDIR}/system/modules/rss_reader/languages/gn/tl_module.php
${CT_WEBDIR}/system/modules/tpl_editor/languages/gn/.htaccess
${CT_WEBDIR}/system/modules/tpl_editor/languages/gn/modules.php
${CT_WEBDIR}/system/modules/tpl_editor/languages/gn/tl_templates.php
