$NetBSD: patch-tar.cabal,v 1.1 2021/04/23 00:21:47 pho Exp $

Relax the dependency constraint. The package is known to be compatible
with GHC 9.

--- tar.cabal.orig	2001-09-09 01:46:40.000000000 +0000
+++ tar.cabal
@@ -40,7 +40,7 @@ flag old-bytestring
 
 library
 
-  build-depends: base       >= 4 && < 4.14,
+  build-depends: base       >= 4 && < 5,
                  filepath             < 1.5,
                  array                < 0.6,
                  containers >= 0.2 && < 0.7,
