$NetBSD: patch-zlib.cabal,v 1.1 2022/02/11 13:03:40 pho Exp $

Fix build with GHC 9.2

--- zlib.cabal.orig	2001-09-09 01:46:40.000000000 +0000
+++ zlib.cabal
@@ -91,7 +91,7 @@ library
   if impl(ghc >= 7.6)
     other-extensions: CApiFFI
 
-  build-depends:   base >= 4 && < 4.16,
+  build-depends:   base >= 4 && < 5,
                    bytestring >= 0.9 && < 0.12
   if impl(ghc >= 7.0 && < 8.0.3)
     build-depends: ghc-prim
